# NOC-Whisperer

./: .cursorrules  .env.example  .gitignore  CONTEXT.md  EXECUTION_PLAN.md  README.md  pyproject.toml  pytest.ini  requirements-gpu-lock.txt  requirements-gpu.txt  requirements.txt
adapters/: canonical_alert.py  synthetic_adapter.py
agents/: correlation_agent.py  normalizer_agent.py  triage_agent.py
communications/: communications_agent.py
config/: llm_endpoints.yaml  mcp_endpoints.yaml  model_config.yaml  prometheus_config.yaml  reconciler_config.yaml  thresholds.yaml
dashboard/: noc_dashboard.py
docs/: AGENT_MENTAL_MODELS.md  DEMO_QA.md  DEMO_QA_CRIB_SHEET.md  DEMO_SPEAKER_CHEAT_SHEET.md  NOC_Whisperer_Capstone_v2.pptx  REMINDERS.md  SESSION_HANDOFF.md  evaluation_results.md  presentation_outline.md
dspy_programs/: __init__.py  alerts_to_incident.py  alerts_to_incident_compiled.json
generator/: fault_scenarios.py  synthetic_generator.py
mcp_tools/: jaeger_mcp.py  node_exporter_mcp.py  prometheus_mcp.py  topology_mcp.py
orchestrator/: adk_orchestrator.py  batch_reconciler.py  incident_store.py  master_orchestrator.py  reconciler_agent.py  streaming_pipeline.py
scripts/: build_pptx.py  generate_training_data.py  optimize_dspy.py  prepare_communications_sft.py  prepare_normalizer_sft.py  run_demo.py  run_demo_adk.py  run_evaluation.py  train_communications_rlvr.py  train_communications_sft.py  train_normalizer_rlvr.py  train_normalizer_sft.py
tests/: test_adk_communications_tools.py  test_adk_correlation_tools.py  test_adk_incident_tools.py  test_jaeger_mcp.py  (+34 more)
(+13 files in other folders)
