[project]
name = "noc-whisperer"
version = "0.1.0"
description = "Agentic alert correlation and incident synthesis"
requires-python = ">=3.11"
dependencies = [
    "dspy-ai",
    "openai",
    "python-dotenv",
    "aiosqlite",
    "rich",
    "textstat",
    "requests",
    "pandas",
    "numpy",
    "pyyaml",
    "ollama",
    "google-adk",
]

[dependency-groups]
gpu = [
    "torch",
    "transformers",
    "peft",
    "trl",
    "accelerate",
    "bitsandbytes",
    "datasets",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "typeguard",
]
